--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,5 @@
     "start_url": "/PWAPlanet/index.html",
     "display": "standalone",
     "background_color": "#3E4EB8",
-    "theme_color": "#2F3BA2"
+    "theme_color": "#2196F3"
 }
