Update manifest again
Signed-off-by: Lays Rodrigues <laysrodriguessilva@gmail.com>

--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,6 @@
     }],
     "start_url": "/PWAPlanet/index.html",
     "display": "standalone",
-    "background_color": "#3E4EB8",
+    "background_color": "#2196F3",
     "theme_color": "#2196F3"
 }
