--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "file-loader": "^1.1.5",
     "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.7.2",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
